# ArgFormatter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/ArgFormatter/: ArgContainer.h  ArgContainerImpl.h  ArgFormatter.h  ArgFormatterImpl.h
sandbox/: CMakeLists.txt  sandbox.cpp
scripts/: build_c.bat  build_h.bat  clang_format.bat  cmake_format.bat
src/: AF_Compiled.cpp  ArgFormatter.cpp  CMakeLists.txt
tests/: CmakeLists.txt  FormatTest.cpp
